fix splash banners on mobile

--- a/app/assets/stylesheets/products/product_card.scss
+++ b/app/assets/stylesheets/products/product_card.scss
@@ -21,9 +21,9 @@
     width: 207px;
 }
 
-.flex-start > .product-card-container {
-    margin-right: 20px;
-}
+// .flex-start > .product-card-container {
+//     margin-right: 20px;
+// }
 
 
 .index-card-stars > svg {
